--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <div class="main-nav container flex">
         <a href="#" class="company-logo" onclick="reload()">
-          <img src="./assets/logo.png" alt="company logo" />
+          <img src="./assets/logo2.png" alt="company logo" />
         </a>
 
         <div class="nav-links">
